Help message for MixActivity, UI improvement.

--- a/app/src/main/res/layout/progressbar_edit.xml
+++ b/app/src/main/res/layout/progressbar_edit.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="100dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/MusicPlay_Edit"
@@ -18,6 +19,7 @@
         >
 
         <SeekBar
+            android:id="@+id/SeekBar2"
             android:layout_width="match_parent"
             android:layout_height="8dp"
             android:layout_margin="5dp"
@@ -25,16 +27,14 @@
             android:maxHeight="2dp"
             android:progress="30"
             android:progressDrawable="@drawable/progressbar_color"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:thumb="@drawable/seekbar_thumb"
-            android:id="@+id/SeekBar2"
             android:visibility="invisible"
-            >
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
         </SeekBar>
+
         <ProgressBar
             android:id="@+id/MusicLine2"
             style="@android:style/Widget.ProgressBar.Horizontal"
@@ -76,6 +76,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
+        android:layout_marginBottom="12dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
