--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -66,6 +66,7 @@
             android:id="@+id/textView_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pingfang_regular"
             android:text="编辑"
             android:textColor="#1D283F"
             android:textSize="28sp"
@@ -125,8 +126,7 @@
         android:id="@+id/editCard"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_margin="18dp"
         android:outlineAmbientShadowColor="#CC819FED"
         android:outlineSpotShadowColor="#CC0048FF"
         app:cardCornerRadius="16dp"
@@ -245,9 +245,8 @@
     <include
         android:id="@+id/include_edit"
         layout="@layout/progressbar_edit"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
