Change Font to Noto Sans, UI improvement.

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -64,7 +64,8 @@
             android:id="@+id/title_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pingfang_regular"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:text="回忆"
             android:textColor="#1D283F"
             android:textSize="28sp"
@@ -162,8 +163,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="18dp"
-                android:fontFamily="@font/pingfang_medium"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
                 android:text="空気"
                 android:textColor="@color/black"
                 android:textSize="28sp"
@@ -176,7 +178,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:fontFamily="@font/pingfang_regular"
+                android:fontFamily="@font/notosans_regular"
+                android:includeFontPadding="false"
                 android:text="#12月9日  周四  11:00 "
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/musicDiaryTitle"
@@ -187,6 +190,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
+                android:fontFamily="@font/notosans_regular"
+                android:includeFontPadding="false"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@id/musicDiaryDate"
                 app:layout_constraintTop_toBottomOf="@id/musicDiaryDate" />
@@ -208,7 +213,8 @@
                     android:id="@+id/diaryContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/pingfang_medium"
+                    android:fontFamily="@font/notosans_medium"
+                    android:includeFontPadding="false"
                     android:text="    秋が好きで、夏の暑さを消し、少し涼しく、赤いカエデが舞い上がるのを見て、蒸し暑いサツマイモを食べ、午後に風が吹くときにコートを着て、夜は鍋バーベキューを食べる賑やかな場所を見つけ、後で家に帰っても大丈夫です  "
                     android:textColor="@color/black"
                     android:textSize="14sp" />
@@ -240,7 +246,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/pingfang_medium"
+                        android:fontFamily="@font/notosans_medium"
+                        android:includeFontPadding="false"
                         android:text="完成"
 
                         android:textColor="@color/white"
@@ -278,7 +285,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/pingfang_medium"
+                        android:fontFamily="@font/notosans_medium"
+                        android:includeFontPadding="false"
                         android:text="删除"
                         android:textColor="@color/black"
                         android:textSize="20sp"
