--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
             android:id="@+id/buttonMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pingfang_medium"
+            android:fontFamily="@font/notosans_medium"
+            android:includeFontPadding="false"
             android:text="点击创造属于你的自然音乐"
             android:textColor="@color/design_default_color_on_primary"
             android:textSize="21sp"
@@ -71,11 +72,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="60dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/pingfang_regular"
+            android:fontFamily="@font/notosans_regular"
             android:text="我的创作"
             android:textSize="21sp"
+            android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
