--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -40,11 +40,11 @@
         android:id="@+id/gridLayout"
         android:layout_width="350dp"
         android:layout_height="350dp"
+        android:layout_marginTop="30dp"
         android:outlineAmbientShadowColor="@color/colorAmbient"
         android:outlineSpotShadowColor="@color/colorSpot"
         app:cardCornerRadius="16dp"
         app:cardElevation="24dp"
-        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView03"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,26 +69,27 @@
                 app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media.16" />
 
-            <View
-                android:id="@+id/hintBG"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:alpha="0.5"
-                android:background="@color/design_default_color_on_primary"
-                android:elevation="10dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <View
+                    android:id="@+id/hintBG"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0.5"
+                    android:background="@color/design_default_color_on_primary"
+                    android:translationZ="1dp" />
+
                 <TextView
                     android:id="@+id/hintText1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:elevation="20dp"
                     android:text="SIMPLE"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:translationZ="30dp"
                     app:layout_constraintBottom_toBottomOf="@id/square4"
                     app:layout_constraintEnd_toEndOf="@id/square4"
                     app:layout_constraintStart_toStartOf="@id/square4"
@@ -98,10 +99,10 @@
                     android:id="@+id/hintText2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:elevation="20dp"
                     android:text="LOUD"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:translationZ="30dp"
                     app:layout_constraintBottom_toBottomOf="@id/square2"
                     app:layout_constraintEnd_toEndOf="@id/square2"
                     app:layout_constraintStart_toStartOf="@id/square2"
@@ -111,10 +112,10 @@
                     android:id="@+id/hintText3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:elevation="20dp"
                     android:text="COMPLEX"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:translationZ="30dp"
                     app:layout_constraintBottom_toBottomOf="@id/square6"
                     app:layout_constraintEnd_toEndOf="@id/square6"
                     app:layout_constraintStart_toStartOf="@id/square6"
@@ -124,10 +125,10 @@
                     android:id="@+id/hintText4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:elevation="20dp"
                     android:text="SOFT"
                     android:textColor="@color/black"
                     android:textSize="16sp"
+                    android:translationZ="30dp"
                     app:layout_constraintBottom_toBottomOf="@id/square8"
                     app:layout_constraintEnd_toEndOf="@id/square8"
                     app:layout_constraintStart_toStartOf="@id/square8"
@@ -656,7 +657,8 @@
             android:id="@+id/textView_mix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pingfang_regular"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:text="创作"
             android:textColor="#1D283F"
             android:textSize="28sp"
