--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -5,14 +5,12 @@
     android:id="@+id/itemCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
+    android:layout_marginHorizontal="15dp"
     android:layout_marginVertical="12dp"
-    android:clickable="true"
-    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:outlineAmbientShadowColor="#80000000"
     android:outlineSpotShadowColor="#80000000"
-    app:cardCornerRadius="6dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="24dp"
     tools:targetApi="p">
 
@@ -39,11 +37,12 @@
             android:id="@+id/TextDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="9dp"
             android:layout_marginTop="12dp"
-            android:fontFamily="@font/pingfang_regular"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:text="12月9日 周四"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/PhotoTitle" />
 
@@ -51,12 +50,13 @@
             android:id="@+id/TextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:fontFamily="@font/pingfang_medium"
+            android:layout_marginStart="9dp"
+            android:fontFamily="@font/notosans_medium"
+            android:includeFontPadding="false"
             android:text="今天的空气是橘子味的"
             android:textColor="@color/black"
-            android:textSize="15sp"
             android:textStyle="bold"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/TextDate" />
