--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -66,7 +66,8 @@
             android:id="@+id/textView_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pingfang_regular"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:text="编辑"
             android:textColor="#1D283F"
             android:textSize="28sp"
@@ -183,7 +184,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/pingfang_regular"
+                android:fontFamily="@font/notosans_regular"
+                android:includeFontPadding="false"
                 android:text="MM月dd日 E HH:mm"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/editTextTitle"
@@ -197,7 +199,8 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@null"
-                android:fontFamily="@font/pingfang_medium"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
                 android:hint="给你的音乐起个名字"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -227,7 +230,8 @@
                     android:layout_height="match_parent"
                     android:layout_margin="12dp"
                     android:background="@null"
-                    android:fontFamily="@font/pingfang_regular"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"
                     android:gravity="top|start"
                     android:hint="写点什么吧~"
                     android:inputType="textMultiLine"
