--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -42,8 +42,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="6dp"
-               >
+                android:layout_margin="6dp">
 
                 <ImageView
                     android:id="@+id/imageView_select_back"
@@ -83,8 +82,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="6dp"
-                >
+                android:layout_margin="6dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,14 +114,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
-        android:fontFamily="@font/pingfang_regular"
-        android:text="选择你的背景音乐"
-        android:textColor="@color/design_default_color_on_primary"
         android:elevation="12dp"
-        android:textSize="32sp"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
         android:shadowColor="@color/colorBackground"
         android:shadowDy="1"
         android:shadowRadius="0.5"
+        android:text="选择你的背景音乐"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleBarLayout_select" />
