ViewBinding(MixActivity,MainActivity)

--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -719,13 +719,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
-        app:layout_constraintBottom_toTopOf="@+id/playbackButtonMix"
+        app:layout_constraintBottom_toTopOf="@+id/playbackButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/playbackButtonMix"
+        android:id="@+id/playbackButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginBottom="40dp"
@@ -747,7 +747,7 @@
             android:background="@drawable/gradient2">
 
             <ImageView
-                android:id="@+id/playbackButtonImageMix"
+                android:id="@+id/playbackButtonImage"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/outline_pause_24"
