--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -9,7 +9,7 @@
     tools:context="com.hustunique.morii.music.MusicSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView02"
+        android:id="@+id/musicTabRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/backLayout_select"
+            android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -68,7 +68,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/okay"
+            android:id="@+id/nextstepButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
