--- a/app/src/main/res/layout/progressbar.xml
+++ b/app/src/main/res/layout/progressbar.xml
@@ -77,8 +77,8 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:outlineAmbientShadowColor="#CC0C4EFB"
-        android:outlineSpotShadowColor="#CC1751EA"
+        android:outlineAmbientShadowColor="@color/colorAmbient"
+        android:outlineSpotShadowColor="@color/colorAmbient"
         app:cardCornerRadius="20dp"
         app:cardElevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
