--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/imageView_edit_back"
+                    android:id="@+id/backButtonImage"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -47,14 +47,15 @@
                     app:srcCompat="@drawable/ic_icon_back_design" />
 
                 <TextView
+                    android:id="@+id/backButtonText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    android:text="返回"
+                    android:text="返回首页"
                     android:textColor="#1D283F"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/imageView_edit_back"
+                    app:layout_constraintStart_toEndOf="@id/backButtonImage"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -100,9 +101,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginEnd="6dp"
                     android:text="分享"
-                    android:textColor="#1D283F"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/imageView_content_complete"
@@ -115,7 +116,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/outline_ios_share_24" />
+                    app:srcCompat="@drawable/ic_share" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -127,8 +128,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="18dp"
-        android:outlineAmbientShadowColor="#CC819FED"
-        android:outlineSpotShadowColor="#CC819FED"
+        android:outlineAmbientShadowColor="@color/colorAmbient"
+        android:outlineSpotShadowColor="@color/colorAmbient"
         app:cardCornerRadius="16dp"
         app:cardElevation="12dp"
         app:layout_constraintBottom_toTopOf="@id/progressbar_content"
