--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/imageView_edit_back"
+                    android:id="@+id/backButtonImage"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +56,7 @@
                     android:textColor="#1D283F"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/imageView_edit_back"
+                    app:layout_constraintStart_toEndOf="@id/backButtonImage"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -128,8 +128,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="18dp"
-        android:outlineAmbientShadowColor="#CC819FED"
-        android:outlineSpotShadowColor="#CC0048FF"
+        android:outlineAmbientShadowColor="@color/colorAmbient"
+        android:outlineSpotShadowColor="@color/colorAmbient"
         app:cardCornerRadius="16dp"
         app:cardElevation="12dp"
         app:layout_constraintBottom_toTopOf="@id/progressbar"
@@ -214,8 +214,8 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="24dp"
-                android:outlineAmbientShadowColor="#819FED"
-                android:outlineSpotShadowColor="#819FED"
+                android:outlineAmbientShadowColor="@color/colorAmbient"
+                android:outlineSpotShadowColor="@color/colorAmbient"
                 app:cardBackgroundColor="#E4ECFB"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="16dp"
